@@ -193,6 +193,20 @@
 #
 # pig.spill.gc.activation.size=40000000
 
+# For heaps of 1GB and less, SpillableMemoryManager spill will be triggered
+# if the fraction of biggest heap exceeds the usage threshold. Default is 0.7
+# pig.spill.memory.usage.threshold.fraction=0.7
+
+# For heaps of 1GB and less, SpillableMemoryManager spill will be triggered
+# if the fraction of big heap exceeds the collection threshold. Default is 0.7
+# pig.spill.collection.threshold.fraction=0.7 
+
+# For heaps bigger than 1GB, we want to use a fixed size for collection and
+# usage thresholds to better utilize memory. SpillableMemoryManager spill will be triggered
+# if the unused heap size falls below this threshold.
+# Default is 350 MB
+# pig.spill.unused.memory.threshold.size=367001600
+
 # Maximum amount of data to replicate using the distributed cache when doing
 # fragment-replicated join. (default: 1000000000, about 1GB) Consider increasing
 # this in a production environment, but carefully.
